# tako

./: .gitmodules  CMakeLists.txt
SandboxWren/: CMakeLists.txt  Sandbox.cpp
SandboxWren/Assets/: main.wren
Tako/: CMakeLists.txt
Tako/include/: Event.hpp  SmallVec.hpp  Tako.hpp  WrenScriptContext.hpp
Tako/include/Scripting/: AST.hpp  Chunk.hpp  Compiler.hpp  Environment.hpp  Interpreter.hpp  Object.hpp  Parser.hpp  Resolver.hpp  Scanner.hpp  ScriptValue.hpp  Scripting.hpp  VM.hpp
Tako/src/: EntryPoint.cpp  Renderer3D.cppm  WrenScriptContext.cpp
Tako/src/Scripting/: ScriptValue.cpp
Tako/src/platform/win32/: Window.cpp
Tako/test/: LangBench.cpp
dependencies/wren/: CMakeLists.txt
